--- a/2_map_and_list/atm_final.html
+++ b/2_map_and_list/atm_final.html
@@ -1,21 +1,18 @@
 <html>
 <head>
-<link href="styles.css" rel="stylesheet">
+	<link href="styles.css" rel="stylesheet">
 </head>
 <body>
 		
-	<div id="app"></div>	
-		
-		
-		
-		
+  <div id="app"></div>	
+
   <script src="http://code.jquery.com/qunit/qunit-1.12.0.js"></script>
   <script src="http://code.jquery.com/jquery-1.10.1.js"></script>
   <script src="http://canjs.com/release/2.0.3/can.jquery.js"></script>
   <script src="http://canjs.com/release/2.0.3/can.object.js"></script>
   <script src="http://canjs.com/release/2.0.3/can.fixture.js"></script>
   <script src="http://canjs.com/release/2.0.3/can.map.setter.js"></script>
-  <script src="atm.js"></script>
+  <script src="atm_final.js"></script>
   
   <script type="text/mustache" id="app-template">
   	<atm-machine></atm-machine>
