--- a/6_component/instantiate_1.html
+++ b/6_component/instantiate_1.html
@@ -1,7 +1,7 @@
 <div id="demo-html">
 <div id='out'></div>
 <script id="app" type="text/stache">
-	<hello-world subject="{data.name}"></hello-world>
+	<hello-world subject="{{data.name}}"></hello-world>
 </script>
 </div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
