--- a/1_intro/todo-working.html
+++ b/1_intro/todo-working.html
@@ -54,12 +54,17 @@
 		</button>
 	</footer>
 </section>
-<div id='app'></div>
+
+
+<div id='out'></div>
+
 <script src='jquery.1.9.1.js'></script>
 <script src='can.jquery.js'></script>
-<script src='can.object.js'></script>
+<script src='can.stache.js'></script>
 <script src='can.fixture.js'></script>
+
 <script>
 
-
+	
+	
 </script>
