--- a/6_component/instantiate_0.html
+++ b/6_component/instantiate_0.html
@@ -18,7 +18,7 @@ can.Component.extend({
 $("#out").html( can.view("app",{}) );
 
 setTimeout(function(){
-	
+	debugger;
 	$("hello-world").attr("subject","Planet Earth");
 	
 },2000);
