--- a/6_component/instantiate_2.html
+++ b/6_component/instantiate_2.html
@@ -20,7 +20,7 @@ var data = new can.Map({
 		title: "Dr.",
 		first: "Cosmo",
 		last: "Kramer",
-		licensePlate: "ASSMAN"
+		licensePlate: "6A342B"
 	}
 });
 
@@ -29,7 +29,7 @@ $("#out").html( can.view("app",{
 }) );
 
 setTimeout(function(){
-	
+	debugger;
 	data.attr("owner",{
 		title: "Ms.",
 		first: "Elaine",
