--- a/6_component/events_1.html
+++ b/6_component/events_1.html
@@ -60,7 +60,7 @@
 can.fixture({
 	"/drivers": function(){
 		return [
-			{ title: "Dr.", first: "Cosmo", last: "Kramer", licensePlate: "ASSMAN" },
+			{ title: "Dr.", first: "Cosmo", last: "Kramer", licensePlate: "543210" },
 			{ title: "Ms.", first: "Elaine", last: "Benes", licensePlate: "621433" }
 		];
 	},
