--- a/6_component/instantiate_4.html
+++ b/6_component/instantiate_4.html
@@ -30,7 +30,7 @@ can.Component.extend({
 	template: can.view("drivers-stache"),
 	scope: {
 		drivers: [
-			{ title: "Dr.", first: "Cosmo", last: "Kramer", licensePlate: "ASSMAN" },
+			{ title: "Dr.", first: "Cosmo", last: "Kramer", licensePlate: "543210" },
 			{ title: "Ms.", first: "Elaine", last: "Benes", licensePlate: "621433" }
 		],
 		select: function(driver){
